--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "concurrently": "^6.5.0",
+    "front-matter": "^4.0.2",
+    "glob": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
+    "@types/glob": "^7.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "prettier": "^2.5.1",
