--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^7.2.0",
     "markdown-it": "^12.3.0",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
     "tailwindcss": "^3.0.7",
