--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "front-matter": "^4.0.2",
     "glob": "^7.2.0",
     "markdown-it": "^12.3.0",
+    "mdx-bundler": "^8.0.1",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
